tests/snapshots/files__peggy_loop-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int) {
  v1_: int = const 0;
  v2_: int = const 3;
  v3_: int = const 5;
  v4_: int = const 1;
  v5_: int = id v1_;
  v6_: int = id v2_;
  v7_: int = id v3_;
  v8_: int = id v4_;
  v9_: int = id v0;
.v10_:
  v11_: bool = lt v5_ v9_;
  br v11_ .v12_ .v13_;
.v12_:
  v14_: int = add v8_ v5_;
  v15_: bool = eq v7_ v14_;
  br v15_ .v16_ .v17_;
.v16_:
  v18_: int = add v6_ v14_;
  v19_: int = id v18_;
  v20_: int = id v6_;
  v21_: int = id v7_;
  v22_: int = id v8_;
  v23_: int = id v9_;
.v24_:
  v25_: bool = const true;
  v26_: bool = id v25_;
  v27_: int = id v19_;
  v28_: int = id v6_;
  v29_: int = id v7_;
  v30_: int = id v8_;
  v31_: int = id v9_;
.v32_:
  v5_: int = id v27_;
  v6_: int = id v6_;
  v7_: int = id v7_;
  v8_: int = id v8_;
  v9_: int = id v9_;
  br v11_ .v10_ .v33_;
.v17_:
  v19_: int = id v14_;
  v20_: int = id v6_;
  v21_: int = id v7_;
  v22_: int = id v8_;
  v23_: int = id v9_;
  jmp .v24_;
.v13_:
  v34_: bool = const false;
  v26_: bool = id v34_;
  v27_: int = id v5_;
  v28_: int = id v6_;
  v29_: int = id v7_;
  v30_: int = id v8_;
  v31_: int = id v9_;
  jmp .v32_;
.v33_:
}
