tests/snapshots/files__pull_out_small-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20
@main(v0: int) {
  c1_: int = const 0;
  v2_: bool = lt c1_ v0;
  br v2_ .b3_ .b4_;
.b3_:
  c5_: int = const 20;
  print c5_;
  c6_: int = const 5;
  v7_: int = mul c6_ v0;
  v8_: int = id v7_;
  print v8_;
  ret;
  jmp .b9_;
.b4_:
  c10_: int = const 20;
  print c10_;
  c11_: int = const 5;
  v12_: int = mul c11_ v0;
  v8_: int = id v12_;
  print v8_;
  ret;
.b9_:
}
